--- a/mmportalMVC/Views/Transaction/Index.cshtml
+++ b/mmportalMVC/Views/Transaction/Index.cshtml
@@ -3,43 +3,169 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+<main class="ms-sm-auto col-md-10">
     <div class="col-md-12">
-        <div id="timeline-wrap">
-            <div id="timeline"></div>
+        <div class="TimeLine">
+            <div class="row bs-wizard" style="border-bottom:0;">
+                <div class="col-md-2 bs-wizard-step complete step-1">
+                    <div class="text-center bs-wizard-stepnum">1</div>
+                    <div class="progress"><div class="progress-bar"></div></div>
+                    <a href="#" class="bs-wizard-dot"></a>
+                    <div class="bs-wizard-info text-center">Opret</div>
+                </div>
 
-            <!-- This is the individual marker-->
-            <div class="marker mfirst timeline-icon one">
-                <i class="fa fa-pencil"></i>
-            </div>
-            <!-- / marker -->
-            <!-- This is the individual marker-->
-            <div class="marker m2 timeline-icon two">
-                <i class="fa fa-usd"></i>
-            </div>
-            <!-- / marker -->
-            <!-- This is the individual panel-->
-            <div class="timeline-panel">
-                <p>text</p>
-            </div>
-            <!-- / panel -->
-            <!-- This is the individual marker-->
-            <div class="marker m3 timeline-icon three">
-                <i class="fa fa-list"></i>
-            </div>
-            <!-- / marker -->
-            <!-- This is the individual marker-->
-            <div class="marker mlast timeline-icon four">
-                <i class="fa fa-check"></i>
-            </div>
-            <!-- / marker -->
+                <div class="col-md-2 bs-wizard-step disabled step-2">
+                    <!-- complete -->
+                    <div class="text-center bs-wizard-stepnum">2</div>
+                    <div class="progress"><div class="progress-bar"></div></div>
+                    <a href="#" class="bs-wizard-dot"></a>
+                    <div class="bs-wizard-info text-center">Services</div>
+                </div>
 
+                <div class="col-md-2 bs-wizard-step disabled step-3">
+                    <!-- complete -->
+                    <div class="text-center bs-wizard-stepnum">3</div>
+                    <div class="progress"><div class="progress-bar"></div></div>
+                    <a href="#" class="bs-wizard-dot"></a>
+                    <div class="bs-wizard-info text-center">Detaljer</div>
+                </div>
 
-
+                <div class="col-md-2 bs-wizard-step disabled step-4">
+                    <!-- active -->
+                    <div class="text-center bs-wizard-stepnum">4</div>
+                    <div class="progress"><div class="progress-bar"></div></div>
+                    <a href="#" class="bs-wizard-dot"></a>
+                    <div class="bs-wizard-info text-center">Bekræft</div>
+                </div>
+                <div class="col-md-2 bs-wizard-step disabled step-5">
+                    <!-- active -->
+                    <div class="text-center bs-wizard-stepnum">5</div>
+                    <div class="progress"><div class="progress-bar"></div></div>
+                    <a href="#" class="bs-wizard-dot"></a>
+                    <div class="bs-wizard-info text-center">Afslut</div>
+                </div>
+            </div>
         </div>
+        <div class="step3">
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label for="inputDescription">Produkt, service beskrivelse</label>
+                    <input type="text" class="form-control" id="inputDescription" placeholder="F.eks. iPhone x 16gb, webshop, logo">
+                </div>
+                <div class="form-group col-md-6">
+                    <label for="inputEmail">Modpart</label>
+                    <input type="email" class="form-control" id="inputEmail" placeholder="Indtast sælgers email for at sende en anmodning">
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label for="inputCategori">Vælg kategori</label>
+                    <input type="text" class="form-control" id="inputCategori" placeholder="Er varen brugt, ny eller defekt?">
+                </div>
+                <div class="form-group col-md-6">
+                    <label for="inputAmount">Det aftalte beløb i kroner</label>
+                    <input type="number" class="form-control" id="inputAmount" placeholder="I DKK kr.">
+                </div>
+            </div>            
+        </div>
+        <div class="footer">
+            <a class="btn btn-primary col-md-offset-1" href="#" style="visibility:hidden" id="step-back" role="button">< Tilbage</a>
+            <a class="btn btn-primary col-md-offset-7" href="#" id="step-forward" role="button">Næste ></a>
+        </div>
+
     </div>
-    
-    <a class="btn btn-primary" href="#" role="button">Standard Service</a>
-    <a class="btn btn-primary" href="#" role="button">Exclusive Service</a>
 </main>
+
+@Scripts.Render("~/bundles/jquery")
+<script>
+    var currentStep = 1;
+
+    $(document).ready(function () {
+        $("#step-forward").click(function () {
+            currentStep++;
+            changeStep();
+        });
+
+        $("#step-back").click(function () {
+            currentStep--;
+            changeStep();
+        });
+    });
+
+    function changeStep() {
+        switch (currentStep) {
+            case 1:
+                changeToStep1();
+                break;
+            case 2:
+                changeToStep2();
+                break;
+            case 3:
+                changeToStep3();
+                break;
+            case 4:
+                changeToStep4();
+                break;
+            case 5:
+                changeToStep5();
+                break;
+            default:
+                break;
+        }
+    }
+
+    function changeToStep1() {
+        $("#step-back").css("visibility", "hidden");
+        $(".step-2").toggleClass("complete");
+        $(".step-2").toggleClass("disabled");
+    }
+
+    function changeToStep2() {
+        $("#step-back").css("visibility", "visible");
+        var step2toggle = $(".step-2").hasClass("disabled");
+        if (step2toggle) {
+            $(".step-2").toggleClass("complete");
+            $(".step-2").toggleClass("disabled");
+        }
+        var step3toggle = $(".step-3").hasClass("complete");
+        if (step3toggle) {
+            $(".step-3").toggleClass("complete");
+            $(".step-3").toggleClass("disabled");
+        }
+    }
+
+    function changeToStep3() {
+        var step3toggle = $(".step-3").hasClass("disabled");
+        if (step3toggle) {
+            $(".step-3").toggleClass("complete");
+            $(".step-3").toggleClass("disabled");
+        }
+        var step4toggle = $(".step-4").hasClass("complete");
+        if (step4toggle) {
+            $(".step-4").toggleClass("complete");
+            $(".step-4").toggleClass("disabled");
+        }
+    }
+    function changeToStep4() {
+        $("#step-forward").text("Næste >");
+        var step4toggle = $(".step-4").hasClass("disabled");
+        if (step4toggle) {
+            $(".step-4").toggleClass("complete");
+            $(".step-4").toggleClass("disabled");
+        }
+        var step5toggle = $(".step-5").hasClass("active");
+        if (step5toggle) {
+            $(".step-5").toggleClass("active");
+            $(".step-5").toggleClass("disabled");
+        }
+    }
+    function changeToStep5() {
+        $("#step-forward").text("ByeBye");
+        var step5toggle = $(".step-5").hasClass("disabled");
+        if (step5toggle) {
+            $(".step-5").toggleClass("active");
+            $(".step-5").toggleClass("disabled");
+        }
+    }
+</script>
+
