--- a/mmportalMVC/Views/Transaction/Index.cshtml
+++ b/mmportalMVC/Views/Transaction/Index.cshtml
@@ -7,14 +7,14 @@
     <div class="col-md-12">
         <div class="TimeLine">
             <div class="row bs-wizard" style="border-bottom:0;">
-                <div class="col-md-2 bs-wizard-step complete step-1">
+                <div class="col-md-1 bs-wizard-step complete step-1">
                     <div class="text-center bs-wizard-stepnum">1</div>
                     <div class="progress"><div class="progress-bar"></div></div>
                     <a href="#" class="bs-wizard-dot"></a>
                     <div class="bs-wizard-info text-center">Opret</div>
                 </div>
 
-                <div class="col-md-2 bs-wizard-step disabled step-2">
+                <div class="col-md-3 bs-wizard-step disabled step-2">
                     <!-- complete -->
                     <div class="text-center bs-wizard-stepnum">2</div>
                     <div class="progress"><div class="progress-bar"></div></div>
@@ -22,7 +22,7 @@
                     <div class="bs-wizard-info text-center">Services</div>
                 </div>
 
-                <div class="col-md-2 bs-wizard-step disabled step-3">
+                <div class="col-md-3 bs-wizard-step disabled step-3">
                     <!-- complete -->
                     <div class="text-center bs-wizard-stepnum">3</div>
                     <div class="progress"><div class="progress-bar"></div></div>
@@ -30,14 +30,14 @@
                     <div class="bs-wizard-info text-center">Detaljer</div>
                 </div>
 
-                <div class="col-md-2 bs-wizard-step disabled step-4">
+                <div class="col-md-3 bs-wizard-step disabled step-4">
                     <!-- active -->
                     <div class="text-center bs-wizard-stepnum">4</div>
                     <div class="progress"><div class="progress-bar"></div></div>
                     <a href="#" class="bs-wizard-dot"></a>
                     <div class="bs-wizard-info text-center">Bekræft</div>
                 </div>
-                <div class="col-md-2 bs-wizard-step disabled step-5">
+                <div class="col-md-1 bs-wizard-step disabled step-5">
                     <!-- active -->
                     <div class="text-center bs-wizard-stepnum">5</div>
                     <div class="progress"><div class="progress-bar"></div></div>
@@ -46,7 +46,7 @@
                 </div>
             </div>
         </div>
-        <div class="step3">
+        <div class="step3 col-md-11">
             <div class="form-row">
                 <div class="form-group col-md-6">
                     <label for="inputDescription">Produkt, service beskrivelse</label>
@@ -68,9 +68,9 @@
                 </div>
             </div>            
         </div>
-        <div class="footer">
+        <div class="footer col-md-12">
             <a class="btn btn-primary col-md-offset-1" href="#" style="visibility:hidden" id="step-back" role="button">< Tilbage</a>
-            <a class="btn btn-primary col-md-offset-7" href="#" id="step-forward" role="button">Næste ></a>
+            <a class="btn btn-primary col-md-offset-8" href="#" id="step-forward" role="button">Næste ></a>
         </div>
 
     </div>
