Tilføj forside skabelon
Skabelon til forside - skal afklares hvor meget der skal bruges

--- a/mmportalMVC/Views/Home/Index.cshtml
+++ b/mmportalMVC/Views/Home/Index.cshtml
@@ -1,15 +1,94 @@
 ﻿<main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-    <div class="row dashboard">
-        <div class="col-md-6">En boks her</div>
-        <div class="col-md-6">en boks her </div>
+    <div class="container-fluid row dashboard">
+        <div class="col-sm-6 ">
+            <div class="card bg-primary">
+                <div class="card-body">
+                    <h3 class="text-center">Inviter en ven og få 10% rabat på din næste handel</h3>
+                    <br />
+                    <form>
+                        <div class="input-group">
+                            <input type="text" class="form-control" id="inviteAFriendLink" placeholder="www.mellemmanden.dk/voucher" disabled />
+                            <span class="input-group-btn">
+                                <button type="submit" class="btn btn-primary">Kopiér</button>
+                            </span>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 ">
+            <div class="card bg-primary">
+                <div class="card-body">
+                    <h3 class="text-center">Indløs din rabatkode her </h3>
+                    <br />
+                    <form>
+                        <div class="input-group">
+                            <input type="text" class="form-control" id="voucherText" placeholder="Rabatkode.." />
+                            <span class="input-group-btn">
+                                <button type="submit" class="btn btn-primary">Indløs</button>
+                            </span>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="row dashboard">
-        <div class="col-md-12">en stor boks her</div>
+    <div class="container-fluid row dashboard">
+        <div class="col-md-12">
+            <div class="card">
+                <div class="card-body">
+                    <div class="col-md-6">
+                        <div class="card bg-info">
+                            <div class="card-body">
+                                <h3>Nye brugere</h3>
+                                <div class="container-fluid">
+                                    <ul class="list-group">
+                                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                                            <img class="img-circle" id="profile-badge" src="~/img/Dollarblob.jpg" />
+                                            <span>
+                                                <p>Gylle gyllesen</p>
+                                                <p>Amager</p>
+                                            </span>
+                                            
+                                            <button type="button" class="btn btn-primary btn-sm last-item-right">Tilføj</button>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="card bg-info">   
+                            <div class="card-body">
+                                <h3 class="bold-text">Dagens mest handlede produkter</h3>
+                                <div class="container-fluid">
+                                    <h4>Elektronik</h4>
+                                    <div class="progress mw-100">
+                                        <div class="progress-bar " role="progressbar" style="width: 45%" aria-valuenow=" 0" aria-valuemin="0" aria-valuemax="100">45%</div>
+                                    </div>
+                                    <h4>Tøj</h4>
+                                    <div class="progress mw-100">
+                                        <div class="progress-bar " role="progressbar" style="width: 55%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">55%</div>
+                                    </div>
+                                    <h4>Møbel</h4>
+                                    <div class="progress mw-100">
+                                        <div class="progress-bar " role="progressbar" style="width: 64%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">64%</div>
+                                    </div>
+                                    <h4>Tilbehør</h4>
+                                    <div class="progress mw-100">
+                                        <div class="progress-bar " role="progressbar" style="width: 78%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">78%</div>
+                                    </div>
+                                    <h4>Smykker</h4>
+                                    <div class="progress mw-100">
+                                        <div class="progress-bar " role="progressbar" style="width: 82%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">82%</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-</main>
 
-<script>
-    $("i").click(function () {
-        $('.timeline-panel').show(0);
-    });
-</script>
+</main>
