--- a/mmportalMVC/Content/custom.css
+++ b/mmportalMVC/Content/custom.css
@@ -1,5 +1,6 @@
 ﻿body {
     color: white;
+    font-family: 'Lato', sans-serif;
 }
 
 * {
@@ -12,10 +13,41 @@
     vertical-align: text-bottom;
 }
 
-/*
+.clearfix > div:last-of-type {
+    margin-left: auto;
+    /* for justify-content: space-between only.
+    * For other option, adjust accordingly */
+}
+.clearflex {
+    width: 85%;
+}
+@media only screen and (max-width:767px) {
+    .clearflex {
+        display: none;
+    }
+}
+.dashboard {
+    margin-top: 1em;
+}
+.bg-primary {
+    background-color: #084E8F !important;
+}
+
+.bg-info {
+    /*background-color: rgba(8,78,143,.5) !important;*/
+    background-color: #52A5DA !important;
+}
+
+.card {
+    border-radius: .75em !important; 
+}
+    /*
  * Sidebar
  */
 
+.last-item-right {
+    margin-left:auto;
+}
 .sidebar {
     position: fixed;
     top: 0;
@@ -31,199 +63,191 @@
     background-color: #084E8F !important;
 }
 
-.logo {
-    margin: 20px 0 20px 0;
-}
-
-#profile-image {
-    max-width: 100px;
-}
-
-@media (max-width: 767.98px) {
-    .sidebar {
-        top: 5rem;
+    .logo {
+        margin: 20px 0 20px 0;
     }
-}
 
-.sidebar-sticky {
-    position: relative;
-    top: 0;
-    height: calc(100vh - 48px);
-    padding-top: .5rem;
-    overflow-x: hidden;
-    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-}
+    #profile-image {
+        max-width: 100px;
+    }
 
-.sidebar .nav-link {
-    font-weight: 500;
-    color: white;
-}
+    #profile-badge {
+        max-width: 62.5px;
+    }
 
-    .sidebar .nav-link .feather {
-        margin-right: 4px;
+    @media (max-width: 767.98px) {
+        .sidebar {
+            top: 5rem;
+        }
+    }
+
+    .sidebar-sticky {
+        position: relative;
+        top: 0;
+        height: calc(100vh - 48px);
+        padding-top: .5rem;
+        overflow-x: hidden;
+        overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+    }
+
+    .sidebar .nav-link {
+        font-weight: 500;
         color: white;
     }
 
-.nav > li > a:hover, .nav > li > a:focus {
-    background-color: #52A5DA !important;
-}
+        .sidebar .nav-link .feather {
+            margin-right: 4px;
+            color: white;
+        }
 
-.sidebar .nav-link.active {
-    color: #52A5DA;
-}
-
-    .sidebar .nav-link:hover .feather,
-    .sidebar .nav-link.active .feather {
-        color: white;
+    .nav > li > a:hover, .nav > li > a:focus {
+        background-color: #52A5DA !important;
     }
 
-.sidebar-heading {
-    font-size: 1rem;
-    text-transform: uppercase;
-}
+    .sidebar .nav-link.active {
+        color: #52A5DA;
+    }
 
-/*
+        .sidebar .nav-link:hover .feather,
+        .sidebar .nav-link.active .feather {
+            color: white;
+        }
+
+    .sidebar-heading {
+        font-size: 1rem;
+        text-transform: uppercase;
+    }
+
+    /*
  * Navbar
  */
-
-.navbar-brand {
-    padding-top: .75rem;
-    padding-bottom: .75rem;
-    font-size: 1rem;
-    background-color: rgba(0, 0, 0, .25);
-    box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
-}
-
-.navbar .navbar-toggler {
-    top: .25rem;
-    right: 1rem;
-}
-
-.navbar .form-control {
-    padding: .75rem 1rem;
-    border-width: 0;
-    border-radius: 0;
-}
-
-.form-control-dark {
-    color: #fff;
-    background-color: rgba(255, 255, 255, .1);
-    border-color: rgba(255, 255, 255, .1);
-}
-
-    .form-control-dark:focus {
-        border-color: transparent;
-        box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
+    #headernav {
+        background-color: #084E8F !important;
     }
 
-.dashboard {
-    background-color: #084E8F !important;
-}
-
-/* Timeline*/
-
-
-#timeline-wrap {
-    margin: 20% 20%;
-    top: 100;
-    position: relative;
-}
-
-#timeline {
-    height: 1px;
-    width: 100%;
-    background-color: #aabbc4;
-    position: relative;
-}
-
-.marker {
-    z-index: 1000;
-    color: #fff;
-    width: 50px;
-    height: 50px;
-    line-height: 50px;
-    font-size: 1.4em;
-    text-align: center;
-    position: absolute;
-    margin-left: -25px;
-    background-color: #999999;
-    border-radius: 50%;
-}
-
-    .marker:hover {
-        -moz-transform: scale(1.2);
-        -webkit-transform: scale(1.2);
-        -o-transform: scale(1.2);
-        -ms-transform: scale(1.2);
-        transform: scale(1.2);
-        -webkit-transition: all 300ms ease;
-        -moz-transition: all 300ms ease;
-        -ms-transition: all 300ms ease;
-        -o-transition: all 300ms ease;
-        transition: all 300ms ease;
+    .navbar .form-control {
+        padding: .75rem 1rem;
+        border-width: 0;
+        border-radius: 0;
     }
 
+    .form-control-dark {
+        color: #fff;
+        background-color: rgba(255, 255, 255, .1);
+        border-color: rgba(255, 255, 255, .1);
+    }
 
-.timeline-icon.one {
-    background-color: #3e4f88 !important;
-}
+        .form-control-dark:focus {
+            border-color: transparent;
+            box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
+        }
 
-.timeline-icon.two {
-    background-color: #536295 !important;
-}
+    
 
-.timeline-icon.three {
-    background-color: #6976a2 !important;
-}
-
-.timeline-icon.four {
-    background-color: #7e8aaf !important;
-}
+    /* Timeline*/
 
 
-.mfirst {
-    top: -25px;
-}
+    #timeline-wrap {
+        margin: 20% 20%;
+        top: 100;
+        position: relative;
+    }
 
-.m2 {
-    top: -25px;
-    left: 32.5%
-}
+    #timeline {
+        height: 1px;
+        width: 100%;
+        background-color: #aabbc4;
+        position: relative;
+    }
 
-.m3 {
-    top: -25px;
-    left: 66%
-}
-
-
-.mlast {
-    top: -25px;
-    left: 100%
-}
-
-.timeline-panel {
-    margin-top: 20%;
-    width: 500px;
-    height: 200px;
-    background-color: #cbd0df;
-    border-radius: 2px;
-    position: relative;
-    text-align: left;
-    padding: 10px;
-    font-size: 20px;
-    font-weight: bold;
-    line-height: 20px;
-    float: left;
-}
-
-    .timeline-panel:after {
-        content: '';
+    .marker {
+        z-index: 1000;
+        color: #fff;
+        width: 50px;
+        height: 50px;
+        line-height: 50px;
+        font-size: 1.4em;
+        text-align: center;
         position: absolute;
-        margin-top: -12%;
-        left: 10%;
-        width: 0;
-        height: 0;
-        border: 12px solid transparent;
-        border-bottom: 15px solid #cbd0df;
+        margin-left: -25px;
+        background-color: #999999;
+        border-radius: 50%;
     }
+
+        .marker:hover {
+            -moz-transform: scale(1.2);
+            -webkit-transform: scale(1.2);
+            -o-transform: scale(1.2);
+            -ms-transform: scale(1.2);
+            transform: scale(1.2);
+            -webkit-transition: all 300ms ease;
+            -moz-transition: all 300ms ease;
+            -ms-transition: all 300ms ease;
+            -o-transition: all 300ms ease;
+            transition: all 300ms ease;
+        }
+
+
+    .timeline-icon.one {
+        background-color: #3e4f88 !important;
+    }
+
+    .timeline-icon.two {
+        background-color: #536295 !important;
+    }
+
+    .timeline-icon.three {
+        background-color: #6976a2 !important;
+    }
+
+    .timeline-icon.four {
+        background-color: #7e8aaf !important;
+    }
+
+
+    .mfirst {
+        top: -25px;
+    }
+
+    .m2 {
+        top: -25px;
+        left: 32.5%
+    }
+
+    .m3 {
+        top: -25px;
+        left: 66%
+    }
+
+
+    .mlast {
+        top: -25px;
+        left: 100%
+    }
+
+    .timeline-panel {
+        margin-top: 20%;
+        width: 500px;
+        height: 200px;
+        background-color: #cbd0df;
+        border-radius: 2px;
+        position: relative;
+        text-align: left;
+        padding: 10px;
+        font-size: 20px;
+        font-weight: bold;
+        line-height: 20px;
+        float: left;
+    }
+
+        .timeline-panel:after {
+            content: '';
+            position: absolute;
+            margin-top: -12%;
+            left: 10%;
+            width: 0;
+            height: 0;
+            border: 12px solid transparent;
+            border-bottom: 15px solid #cbd0df;
+        }
 
