--- a/mmportalMVC/Content/custom.css
+++ b/mmportalMVC/Content/custom.css
@@ -2,12 +2,25 @@
     color: white;
 }
 
-.form-group label {
+.form-row label.row-header {
+    display: block;
+}
+
+.form-group label.row-header, .row-info {
     color: #595959;
 }
 
 * {
     -webkit-font-smoothing: antialiased;
+}
+.footer{
+    padding-top:10px;
+}
+
+.step1, .step2, .step3, .step4 {
+    border: #337ab7;
+    border-style: dotted;
+    border-width: thin;
 }
 
 .feather {
@@ -15,7 +28,38 @@
     height: 24px;
     vertical-align: text-bottom;
 }
+.TimeLine{
+    padding-bottom:30px;
+}
 
+    img.resize-img
+
+{
+    max-width: 250px;
+    max-height: 400px;
+}
+}
+
+input[type='radio'] {
+    transform: scale(10);
+}
+/* HIDE RADIO */
+.hidden-radio [type=radio] {
+    position: absolute;
+    opacity: 0;
+    width: 0;
+    height: 0;    
+}
+
+    /* IMAGE STYLES */
+    [type=radio] + img {
+        cursor: pointer;
+    }
+
+    /* CHECKED STYLES */
+[type=radio]:checked + img {
+    outline: 2px solid #084E8F;
+}
 /*
  * Sidebar
  */
