Opsætning af model til DB og login/register funktionalitet

--- a/mmportalMVC/Views/Home/Index.cshtml
+++ b/mmportalMVC/Views/Home/Index.cshtml
@@ -1,13 +1,35 @@
 ﻿<main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-    <div class="row dashboard">
-        <div class="col-md-6">En boks her</div>
-        <div class="col-md-6">en boks her </div>
-    </div>
-    <div class="row dashboard">
-        <div class="col-md-12">en stor boks her</div>
+    @*<div class="row dashboard">
+            <div class="col-md-6">En boks her</div>
+            <div class="col-md-6">en boks her </div>
+        </div>
+        <div class="row dashboard">
+            <div class="col-md-12">en stor boks her</div>
+        </div>*@
+    <div class="row justify-content-md-start">
+        <div class="col-md-4">
+            <div class="card">
+                <div class="card-header">
+                    Welcome
+                </div>
+                <div class="card-body">
+                    @if (Session["FullName"] != null)
+                    {
+                        <p>Name: @Session["FullName"].ToString()</p>
+                        <p>Email: @Session["Email"].ToString()</p>
+                        <a href="@Url.Action("Logout","Home")" class="btn btn-warning">Logout</a>
+                    }
+                </div>
+            </div>
+
+        </div>
     </div>
 </main>
-
+<style>
+    div {
+        color: black;
+    }
+</style>
 <script>
     $("i").click(function () {
         $('.timeline-panel').show(0);
