--- a/mmportalMVC/Content/custom.css
+++ b/mmportalMVC/Content/custom.css
@@ -168,122 +168,22 @@ input[type='radio'] {
     background-color: #084E8F !important;
 }
 
-/* Timeline*/
-
-
-/*#timeline-wrap {
-    margin: 20% 20%;
-    top: 100;
-    position: relative;
-}
-
-#timeline {
-    height: 1px;
-    width: 100%;
-    background-color: #aabbc4;
-    position: relative;
-}
-
-.marker {
-    z-index: 1000;
-    color: #fff;
-    width: 50px;
-    height: 50px;
-    line-height: 50px;
-    font-size: 1.4em;
-    text-align: center;
-    position: absolute;
-    margin-left: -25px;
-    background-color: #999999;
-    border-radius: 50%;
-}
-
-    .marker:hover {
-        -moz-transform: scale(1.2);
-        -webkit-transform: scale(1.2);
-        -o-transform: scale(1.2);
-        -ms-transform: scale(1.2);
-        transform: scale(1.2);
-        -webkit-transition: all 300ms ease;
-        -moz-transition: all 300ms ease;
-        -ms-transition: all 300ms ease;
-        -o-transition: all 300ms ease;
-        transition: all 300ms ease;
-    }
-
-
-.timeline-icon.one {
-    background-color: #3e4f88 !important;
-}
-
-.timeline-icon.two {
-    background-color: #536295 !important;
-}
-
-.timeline-icon.three {
-    background-color: #6976a2 !important;
-}
-
-.timeline-icon.four {
-    background-color: #7e8aaf !important;
-}
-
-
-.mfirst {
-    top: -25px;
-}
-
-.m2 {
-    top: -25px;
-    left: 32.5%
-}
-
-.m3 {
-    top: -25px;
-    left: 66%
-}
-
-
-.mlast {
-    top: -25px;
-    left: 100%
-}
-
-.timeline-panel {
-    margin-top: 20%;
-    width: 500px;
-    height: 200px;
-    background-color: #cbd0df;
-    border-radius: 2px;
-    position: relative;
-    text-align: left;
-    padding: 10px;
-    font-size: 20px;
-    font-weight: bold;
-    line-height: 20px;
-    float: left;
-}
-
-    .timeline-panel:after {
-        content: '';
-        position: absolute;
-        margin-top: -12%;
-        left: 10%;
-        width: 0;
-        height: 0;
-        border: 12px solid transparent;
-        border-bottom: 15px solid #cbd0df;
-    }*/
-
-/*
-    Timeline
-
-*/
 
 .bs-wizard {
     margin-top: 40px;
 }
-
+.payment-image-button {
+  background-color: white !important;
+  border: white !important;
+}
+.payment-images {
+    max-height: 6em;
+    max-width: 100%;
+    border: 1px solid rgba(0, 0, 0, .25);
+    padding: 0.01em 16px;
+    border-radius: 16px;
+    padding-left: 1em;
+}
 /*Form Wizard*/
 .bs-wizard {
     border-bottom: solid 1px #e0e0e0;
